# daily-doer

./: .gitignore  docker-compose.dev.yml  docker-compose.yml  makefile
apps/api/: .env.example  Dockerfile  prestart.sh  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 24f88319b02e_.py  7cc6b31cd2ae_.py  c580b40cedf8_.py
apps/api/app/: main.py  prestart.py
apps/api/app/common/: entity.py  model.py
apps/api/app/core/: config.py  database.py  dependency.py  models.py
apps/api/app/modules/auth/: auth_controller.py
apps/api/app/modules/tasks/: model.py  task_controller.py
apps/api/app/modules/users/: model.py  user_controller.py
apps/api/app/utils/: jwt_token.py  security.py
apps/web/: package-lock.json
