[tool.poetry]
name = "api"
version = "0.1.0"
description = "Task Management API"
authors = ["Muttakin Islam Hasib <muttakinislamhasib@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.112.0"}
sqlmodel = "^0.0.21"
tenacity = "^9.0.0"
alembic = "^1.13.2"
psycopg2 = "^2.9.9"
bcrypt = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
